new file:   css/hr.css 	new file:   css/news.css 	modified:   index.html 	new file:   news.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Сеансы</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Отзывы</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Контакты</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Новости</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="news.html">Новости</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Обо мне</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Блог</a></li>
                 </ul>
@@ -162,9 +162,9 @@ Pulvinar arcu at morbi posuere cursus. Fermentum est sit enim velit ornare moles
                 </div>
                 <div class="contacts-content__location">
                     <div class="contacts-content__info">
-                        <h2 class="contacts-content__info-header">Бассейн WorkClass</h2>
-                        <div class="contacts-content__info-street"><img class="contacts-content__location-mark" src="icon/location-mark.svg" alt="mark">Невский 140</div>
-                        <div class="contacts-content__info-metro"><img class="contacts-content__metro-logo" src="icon/Spb_metro_logo 1.svg" alt="mark">м. Спасская</div>
+                        <h2 class="contacts-content__info-header">Бассейн "На Гороховой"</h2>
+                        <div class="contacts-content__info-street"><img class="contacts-content__location-mark" src="icon/location-mark.svg" alt="mark">3-й проезд Иванова</div>
+                        <div class="contacts-content__info-metro"><img class="contacts-content__metro-logo" src="icon/Spb_metro_logo 1.svg" alt="mark">м. Крестовский остров</div>
                         <div class="contacts-content__info-record"><img class="contacts-content__calendar" src="icon/calendar.svg" alt="mark">Запись по договоренности</div>
                         <button class="contacts-content__info-button">Записаться на сеанс</button>
                     </div>
