--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             </div>
             <div class="nav__menu">
                 <ul class="nav-menu__list">
-                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Главная</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="index.html">Главная</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Сеансы</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Отзывы</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Контакты</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="news.html">Новости</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Обо мне</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#">Блог</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="blog.html">Блог</a></li>
                 </ul>
             </div>
             <div class="nav-button">
